--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
 		<link rel="stylesheet" href="./css/main.css" />
 	</head>
 	<body>
-		<h1>Smth</h1>
+		<nav class="nav">
+			<div class="container">
+				<div class="nav-row">
+					<a href="./index.html" class="logo"><strong>xVovka</strong> portfolio</a>
+					<ul class="nav-list">
+						<li class="nav-list__item">
+							<a href="./index.html" class="nav-list__link nav-list__link--active">Projects</a>
+						</li>
+						<li class="nav-list__item">
+							<a href="./skills.html" class="nav-list__link">Skills</a>
+						</li>
+						<li class="nav-list__item">
+							<a href="./contacts.html" class="nav-list__link">Contacts</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
 	</body>
 </html>
