--- a/index.html
+++ b/index.html
@@ -26,5 +26,62 @@
 				</div>
 			</div>
 		</nav>
+		<header class="header">
+			<div class="header__wrapper">
+				<h1 class="header__title">
+					<strong>Hi, my name is <em>Vova</em></strong
+					><br />
+					a frontend developer
+				</h1>
+				<div class="header__text">
+					<p>Enjoy my projects</p>
+				</div>
+				<a href="#!" class="btn">Download CV</a>
+			</div>
+		</header>
+		<main class="section">
+			<div class="container">
+				<h2 class="title-1">Projects</h2>
+				<ul class="projects">
+					<li class="project">
+						<a href=".project/page.html">
+							<img src="./img/projects/1.jpg" alt="Project" class="project__img" />
+							<h3 class="project__title">Nau Spider</h3>
+						</a>
+					</li>
+					<li class="project">
+						<a href=".project/page.html">
+							<img src="./img/projects/2.jpg" alt="Project" class="project__img" />
+							<h3 class="project__title">Name</h3>
+						</a>
+					</li>
+					<li class="project">
+						<a href=".project/page.html">
+							<img src="./img/projects/1.jpg" alt="Project" class="project__img" />
+							<h3 class="project__title">Name</h3>
+						</a>
+					</li>
+					<li class="project">
+						<a href=".project/page.html">
+							<img src="./img/projects/2.jpg" alt="Project" class="project__img" />
+							<h3 class="project__title">Name</h3>
+						</a>
+					</li>
+					<li class="project">
+						<a href=".project/page.html">
+							<img src="./img/projects/1.jpg" alt="Project" class="project__img" />
+							<h3 class="project__title">Name</h3>
+						</a>
+					</li>
+					<li class="project">
+						<a href="./projects/page.html">
+							<img src="./img/projects/2.jpg" alt="Project" class="project__img" />
+							<h3 class="project__title">Name</h3>
+						</a>
+					</li>
+				</ul>
+			</div>
+		</main>
+		<footer class="footer"></footer>
 	</body>
 </html>
