--- a/project-page.html
+++ b/project-page.html
@@ -26,62 +26,24 @@
 				</div>
 			</div>
 		</nav>
-		<header class="header">
-			<div class="header__wrapper">
-				<h1 class="header__title">
-					<strong>Hi, my name is <em>Vova</em></strong
-					><br />
-					a frontend developer
-				</h1>
-				<div class="header__text">
-					<p>Enjoy my projects</p>
-				</div>
-				<a href="#!" class="btn">Download CV</a>
-			</div>
-		</header>
+
 		<main class="section">
 			<div class="container">
-				<h2 class="title-1">Projects</h2>
-				<ul class="projects">
-					<li class="project">
-						<a href="./project-page.html">
-							<img src="./img/projects/1.jpg" alt="Project" class="project__img" />
-							<h3 class="project__title">Nau Spider</h3>
+				<div class="project-details">
+					<h1 class="title-1">Nau Spiders</h2>
+						<img src="./img/icons/project-page-icon.jpg" alt="" class="project-details__cover">
+						<div class="project-details__desc">
+							<p>Skills: Vue, Laravel, TailWind</p>
+						</div>
+						<a href="#1" class="btn-outline">
+							<img src="./img/icons/github-black.svg" alt="">
+							GitHub Repo
 						</a>
-					</li>
-					<li class="project">
-						<a href="./project-page.html">
-							<img src="./img/projects/2.jpg" alt="Project" class="project__img" />
-							<h3 class="project__title">Name</h3>
-						</a>
-					</li>
-					<li class="project">
-						<a href="./project-page.html">
-							<img src="./img/projects/1.jpg" alt="Project" class="project__img" />
-							<h3 class="project__title">Name</h3>
-						</a>
-					</li>
-					<li class="project">
-						<a href="./project-page.html">
-							<img src="./img/projects/2.jpg" alt="Project" class="project__img" />
-							<h3 class="project__title">Name</h3>
-						</a>
-					</li>
-					<li class="project">
-						<a href="./project-page.html">
-							<img src="./img/projects/1.jpg" alt="Project" class="project__img" />
-							<h3 class="project__title">Name</h3>
-						</a>
-					</li>
-					<li class="project">
-						<a href="./project-page.html">
-							<img src="./img/projects/2.jpg" alt="Project" class="project__img" />
-							<h3 class="project__title">Name</h3>
-						</a>
-					</li>
-				</ul>
+				</div>
+					
 			</div>
 		</main>
+
 		<footer class="footer">
 			<div class="container">
 				<div class="footer__wrapper">
