--- a/contacts.html
+++ b/contacts.html
@@ -12,6 +12,10 @@
 			<div class="container">
 				<div class="nav-row">
 					<a href="./index.html" class="logo"><strong>xVovka</strong> portfolio</a>
+					<button class="dark-mode-btn">
+						<img src="./img/icons/Sun.svg" alt="" class="dark-mode-btn__icon" />
+						<img src="./img/icons/Moon.svg" alt="" class="dark-mode-btn__icon" />
+					</button>
 					<ul class="nav-list">
 						<li class="nav-list__item">
 							<a href="./index.html" class="nav-list__link">Projects</a>
@@ -70,5 +74,6 @@
 				</div>
 			</div>
 		</footer>
+		<script src="./js/main.js"></script>
 	</body>
 </html>
