add burger menu

--- a/contacts.html
+++ b/contacts.html
@@ -12,6 +12,9 @@
 			<div class="container">
 				<div class="nav-row">
 					<a href="./index.html" class="logo"><strong>xVovka</strong> portfolio</a>
+					<button class="burger">
+						<img src="./img/icons/menu-rounded.svg" />
+					</button>
 					<button class="dark-mode-btn">
 						<img src="./img/icons/Sun.svg" alt="" class="dark-mode-btn__icon" />
 						<img src="./img/icons/Moon.svg" alt="" class="dark-mode-btn__icon" />
