--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="./css/main.css" />
 	</head>
 	<body>
-		<nav class="nav">
+		<nav class="nav sticky">
 			<div class="container">
 				<div class="nav-row">
 					<a href="./index.html" class="logo"><strong>xVovka</strong> portfolio</a>
